--- a/style.css
+++ b/style.css
@@ -18,7 +18,10 @@ h3 {
 
 /* Header */
 header {
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Containers */
